
package source;

/**
 *
 * @author E
 */

public class DataBase_Observer implements Observer{
    public void notify_database_change(){
        //TODO notify table controller that there is new data
    }
}
