package source;

/**
 *
 * @author Ethan Rae
 */
public interface Observer {

}
