@startuml
class source.Controller
class source.DataBase_Connector
class source.DataBase_Observer
class source.Main
class source.Sensor
class source.Sensors_Model
class source.Table_Model
class source.View
interface java.awt.event.ActionListener
interface source.Observer
source.Controller ..> source.View
source.Controller --|> java.awt.event.ActionListener
source.DataBase_Connector ..> java.lang.Override
source.DataBase_Connector ..> java.net.InetAddress
source.DataBase_Connector ..> org.apache.derby.drda.NetworkServerControl
source.DataBase_Observer --|> source.Observer
source.Main ..> java.lang.Override
source.Table_Model ..> java.lang.Override
source.Table_Model --|> javax.swing.table.AbstractTableModel
@enduml